# ct-django

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  docker-compose.yml.j2  package-lock.json  package.json  pyproject.toml
.github/workflows/: cicd.yml
config/: settings.py  urls.py
crawler/: admin.py  apps.py  models.py  services.py
crawler/migrations/: 0001_initial.py  0002_rename_timestamp_stagedmuseumitem_initial_date_fetched_and_more.py
exhibits/: apps.py  models.py  views.py
exhibits/migrations/: 0001_initial.py  0002_exhibithomeindex.py  0002_generalpage_alter_exhibithome_image.py  0003_alter_exhibithome_hero_cta_and_more.py  0003_exhibithome_exhibit_display_order.py  0004_alter_exhibithome_exhibit_display_order_and_more.py  0004_rename_exhibitpageimageonethird_exhibitpageimageonethirdleft.py  0005_exhibithometag_exhibithome_tags.py  0005_exhibitpageimageonethirdleft_is_end_of_exhibit.py  0006_delete_exhibitpageimageonethirdleft.py  0006_imagecomparison.py  0007_exhibitpageimageonethirdleft.py  0008_alter_exhibitpageimageonethirdleft_image.py  0009_exhibitpageleftimageonethird_and_more.py  0010_exhibitpagerightimageonethird.py  0011_exhibitpagehalfandhalf.py  0012_exhibithome_citation_text.py  0013_exhibithome_next_page_exhibithome_previous_page.py  0014_exhibithome_image_caption_and_more.py  0015_exhibithome_is_chapter_intro_page_and_more.py  0016_exhibitpage.py  0017_alter_imagecomparison_first_image_and_more.py  0018_remove_exhibitpageleftimageonethird_image_and_more.py  0019_delete_exhibithomeindex.py  0020_exhibitindex.py  0021_exhibithomeindex_delete_exhibitindex.py  0022_remove_exhibitpage_is_chapter_intro_page_and_more.py  0023_delete_exhibithomeindex.py  0024_exhibitpage_display_title_alter_exhibitpage_layout.py  0025_exhibitpage_image_zoomable.py  0026_exhibitpage_image_first_column_and_more.py  0027_exhibitpage_image_first_column_caption_and_more.py  0030_generalpagethreecolumn.py  (+3 more)
material/: admin.py  admin_dashboard.py  filters.py  models.py  resources.py  tables.py  tests.py  views.py
templates/: base.html  base_exhibit.html  index.html
(+116 files in other folders)
