[tool.poetry]
name = "ct-django"
version = "0.1.0"
description = "Code and files for the Connecting Threads project."
authors = ["Jason Heppler <jason.heppler@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.8"
django-htmx = "^1.23.0"
django-environ = "^0.12.0"
django-tailwind = "^4.0.1"
django-allauth = "^65.7.0"
psycopg2 = "^2.9.10"
wagtail = "^6.4"
django-taggit = "^6.1.0"
taggit-selectize = "^2.11.0"
python-dotenv = "^1.1.0"
django-modelcluster = "^6.4"
django-import-export = "^4.3.7"
django-admin-interface = "^0.30.0"
geopy = "^2.4.1"
django-tables2 = "^2.7.5"
django-filter = "^25.1"
fontawesomefree = "^6.6.0"
django-storages = "^1.14.6"
boto3 = "^1.37.33"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
djhtml = "^3.0.7"
pre-commit = "^4.2.0"
django-debug-toolbar = "^5.1.0"
pytest-django = "^4.11.1"
pylint-django = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
